# rknn_model_zoo

./: .gitignore  cpfile.sh
examples/yolov8_ffmpeg/config/: config.ini
examples/yolov8_ffmpeg/cpp/: CMakeLists.txt  ffmpeg.cc  libavenv.c  libsdl2-draw.c  libsdl2env.c  main.c  main.cc  main.txt  player.c  postprocess.cc  postprocess.h  queue.c  types.c  utils.c  yolov8.h
examples/yolov8_ffmpeg/cpp/examples/: build-rtsp-sdl-demo.sh  rtsp-sdl-demo.c
examples/yolov8_ffmpeg/cpp/ffmpeg/: avfilter-demo.c  build.bat  build.sh  ffmpeg.c
